--- a/index.css
+++ b/index.css
@@ -9,7 +9,7 @@ body {
 
 button {
   font-size: 20px;
-  background-color: #b1abe0;
+  background-color: #b1abe000;
   margin: 10px;
   cursor: pointer;
 }
