--- a/index.css
+++ b/index.css
@@ -13,3 +13,28 @@ button {
   margin: 10px;
   cursor: pointer;
 }
+
+img {
+  width: 150px;
+  height: 150px;
+  object-fit: cover;
+}
+
+.song-box {
+  border: 1px solid black;
+  width: 250px;
+  background-color: #b9d1f5;
+  margin-left: 39%;
+}
+
+.banner {
+  width: 100%;
+  height: 200px;
+}
+
+.icon {
+  width: 50px;
+  height: 50px;
+  margin: 5px;
+  cursor: pointer;
+}
