--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+html, body {
+  height: 100%;
+}
+
 body {
   font-family: Roboto, Arial;
   font-size: 20px;
@@ -5,6 +9,12 @@ body {
   width: 75%;
   margin: auto;
   text-align: center;
+  display: flex;
+  flex-direction: column;
+}
+
+main {
+  flex: 1 0 auto;
 }
 
 button {
@@ -62,4 +72,10 @@ img {
   font-weight: bold;
   font-size: 40px;
   margin: 20px;
+}
+
+footer {
+  font-size: 12px;
+  color: rgb(61, 61, 61);
+  flex-shrink: 0;
 }
