--- a/styles.css
+++ b/styles.css
@@ -16,13 +16,34 @@ body {
   flex-direction: column;
 }
 
+.news-body {
+  background-color: #abbfe0;
+}
+
+.contact-body {
+  background-color: #97c27a;
+}
+
+.other-body {
+  background-color: #b9b4bf;
+}
+
 main {
   flex: 1 0 auto;
 }
 
+.banner {
+  background-image: url("banner.jpg");
+  width: 75%;
+  min-height: 200px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
 button {
   font-size: 20px;
-  background-color: #b1abe000;
+  background-color: #ffffff6c;
   margin: 10px;
   cursor: pointer;
 }
@@ -35,7 +56,7 @@ img {
 
 .song-box {
   border: 1px solid black;
-  background-color: #b9d1f5;
+  background-color: #d8dcf1;
 }
 
 .song-box-info {
@@ -47,11 +68,6 @@ img {
 .write-date {
   font-size: 16px;
   color: rgb(45, 45, 45);
-}
-
-.banner {
-  width: 75%;
-  height: 200px;
 }
 
 .icon {
@@ -70,7 +86,7 @@ img {
   padding-bottom: 15px;
   width: 300px;
   border: 5px solid black;
-  background-color: #d8daf1;
+  background-color: #ccf0cf;
   margin-bottom: 10px;
 }
 
