--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,8 @@ body {
 }
 
 .contact-body {
-  background-color: #97c27a;
+  background-color: #ccd081;
+  /*background-color: #97c27a;*/
 }
 
 .other-body {
@@ -57,6 +58,8 @@ img {
 .song-box {
   border: 1px solid black;
   background-color: #d8dcf1;
+  margin-right: 50px;
+  margin-left: 50px;
 }
 
 .song-box-info {
@@ -86,7 +89,7 @@ img {
   padding-bottom: 15px;
   width: 300px;
   border: 5px solid black;
-  background-color: #ccf0cf;
+  background-color: #eef0cc;
   margin-bottom: 10px;
 }
 
@@ -105,4 +108,25 @@ footer {
   font-size: 12px;
   color: rgb(61, 61, 61);
   flex-shrink: 0;
+}
+
+.descriptor {
+  margin-top: -10px;
+  margin-bottom: 30px;
+}
+
+.serif {
+  font-family: Georgia;
+}
+
+.sans1 {
+  font-family: Futura;
+}
+
+.sans2 {
+  font-family: Avenir;
+}
+
+.script {
+  font-family: Amita;
 }
