--- a/styles.css
+++ b/styles.css
@@ -55,11 +55,16 @@ img {
   object-fit: cover;
 }
 
+.song-box-container {
+  display: flex;
+}
+
 .song-box {
   border: 1px solid black;
   background-color: #d8dcf1;
   margin-right: 50px;
   margin-left: 50px;
+  width: 250px;
 }
 
 .song-box-info {
@@ -113,6 +118,10 @@ footer {
 .descriptor {
   margin-top: -10px;
   margin-bottom: 30px;
+}
+
+.song-icon {
+  margin-bottom: 7px;
 }
 
 .serif {
