--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,10 @@
-html, body {
+html {
   height: 100%;
 }
 
 body {
   position: absolute;
+  min-height: 100%;
   width: 100%;
   display: flex;
   justify-content: center;
