--- a/styles.css
+++ b/styles.css
@@ -21,13 +21,9 @@ body {
   background-color: #abbfe0;
 }
 
-.contact-body {
-  background-color: #ccd081;
+.more-body {
+  background-color: #cdd094;
   /*background-color: #97c27a;*/
-}
-
-.other-body {
-  background-color: #b9b4bf;
 }
 
 main {
