--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@ body {
 
 .more-body {
   background-color: #cdd094;
-  /*background-color: #97c27a;*/
+  /*background-color: #a5c68e;*/
 }
 
 main {
@@ -33,7 +33,7 @@ main {
 .banner {
   background-image: url("images/banner.jpg");
   width: 75%;
-  min-height: 200px;
+  min-height: 195px;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -158,7 +158,7 @@ footer {
 
 .sidebar1 {
   background-color: rgba(0, 0, 0, 0.3);
-  position: absolute;
+  position: fixed;
   top: 0;
   bottom: 0;
   left: 0;
@@ -167,9 +167,29 @@ footer {
 
 .sidebar2 {
   background-color: rgba(0, 0, 0, 0.3);
-  position: absolute;
+  position: fixed;
   top: 0;
   bottom: 0;
   left: 87.5%;
   right: 0;
+}
+
+.sb-logo {
+  width: 100%;
+  height: 130px;
+  margin-bottom: -5px;
+}
+
+a, a:visited {
+  color: black;
+  text-decoration: none;
+}
+
+.sb-box {
+  width: 100%;
+  height: 65px;
+  background-color: #d8dcf1;
+  display: grid;
+  align-items: center;
+  text-align: center;
 }
