--- a/styles.css
+++ b/styles.css
@@ -190,10 +190,16 @@ nav ul {
   border-radius: 15px;
 }
 
+.toggle {
+  width: 100%;
+  text-align: left;
+}
+
 .playlist {
   border-radius: 12px;
   width: 100%;
   height: 152px;
+  margin-left: 10px;
 }
 
 .playlist-ph {
@@ -201,6 +207,7 @@ nav ul {
   width: 100%;
   background-color: gray;
   margin-bottom: 10px;
+  margin-left: 10px;
 }
 
 /*Font templates*/
