--- a/styles.css
+++ b/styles.css
@@ -195,6 +195,11 @@ nav ul {
   text-align: left;
 }
 
+.mashup {
+  display: inline-block;
+  vertical-align: top;
+}
+
 .playlist {
   border-radius: 12px;
   width: 100%;
