--- a/styles.css
+++ b/styles.css
@@ -153,6 +153,17 @@ nav ul {
   color: rgb(45, 45, 45);
 }
 
+.key {
+  border: solid black 1px;
+  border-radius: 5px;
+  font-size: 12px;
+  margin: 0;
+  width: 300px;
+  justify-self: center;
+  text-align: left;
+  padding-left: 150px;
+}
+
 #mc_embed_signup {
   background: #d8dcf1;
   border: 1px solid black;
